<resources>
    <string name="app_name">F1 start timer</string>
    <string name="first_grey_lights">first grey lights</string>
    <string name="second_grey_lights">second grey lights</string>
    <string name="third_grey_lights">third grey lights</string>
    <string name="fourth_grey_lights">fourth grey lights</string>
    <string name="fifth_grey_lights">fifth grey lights</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="try_again">try again</string>
    <string name="log_in_text">LOG IN</string>
    <string name="e_mail_to_log_in">E-mail</string>
    <string name="password_to_log_in">Password</string>
    <string name="log_in_button">LOG IN</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="password_to_sign_up">Password</string>
    <string name="repeat_password_to_sign_up">Repeat password</string>
    <string name="nickname_to_sign_up">Nickname</string>
    <string name="sign_up">SIGN UP</string>
    <string name="e_mail_to_sign_up">E-mail</string>
    <string name="user_name_for_ranking">user name</string>
    <string name="points_for_ranking">points</string>
    <string name="game_tab_label">game</string>
    <string name="rank_tab_label">rank</string>
    <string name="false_start_text">FALSE START</string>
    <string name="request_permission">Request permission</string>
</resources>